# discord-mosaic-bot

./: .directory  .gitignore  Dockerfile  Dockerfile.bot-dev  Dockerfile.dev  Dockerfile.dockerignore  Dockerfile.server-dev  README.md  art.py  bot.py  build_docker.py  color.py  cv.py  emojis.py  gen_emojis.py  image.py  init_db.sql  palette.py  pyproject.toml  requirements.txt  send_art_as_user.py  setup.py  utils.py
data/static/: gallery.js
data/templates/: gallery.jinja2  upload.jinja2
docs/: faq.md
docs/auto_scaling/: auto_scaling.md
hooks/: build  post_push
mosaic_bot/: __build__.py  __init__.py  __main__.py  add_image.py  bot.py  cv.py  db.py  emojis.py  gen_emojis.py  hash.py  image.py  palette.py  requirements.txt  send_art_as_user.py
mosaic_bot/bot/: __init__.py  bot.py  utils.py
mosaic_bot/server/: __init__.py  dev-server.conf  server.py  wsgi.py
mosaic_bot/server/js/: gallery.js
mosaic_bot/server/static/: upload.js
mosaic_bot/server/templates/: gallery.jinja2  upload.jinja2
mosaic_server/server/: settings.py
